--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,14 +4,8 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.png" />
         <link rel="manifest" href="manifest.json" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <title>Lissi</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet"
-        />
     </head>
     <body>
         <div id="app"></div>
