--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.png" />
+        <link rel="icon" href="/favicon.svg" />
         <link rel="manifest" href="/manifest.json" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content, maximum-scale=1.0, user-scalable=0"
+        />
+
         <title>Lissi</title>
     </head>
     <body>
