Add information for crawlers to prevent indexing (#169)
* Add information for crawlers to prevent indexing

* fix format

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.svg" />
         <link rel="manifest" href="/manifest.json" />
+        <meta name="robots" content="noindex,follow" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content, maximum-scale=1.0, user-scalable=0"
